<resources>
    <string name="app_name">IOTUNAC</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="web_client_id">882956572497-9bg6g38ru87b2kh36u1hq91fgu3uhqo9.apps.googleusercontent.com</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="afirma">"Si usted contestó "NO" honestamente a todas las preguntas, entonces puede estar razonablemente seguro que puede comenzar a ser más activo físicamente, pero con un enfoque lento y que se progrese gradualmente.\n"
        "Ésta es la manera más segura y fácil."</string>
    <string name="imc">Gracias por registrarse, tu progreso será fruto de tu constancia y perseverancia, con la tabla encuentra tu rango de peso adecuado </string>
    <string name="title_activity_test">Test</string>
    <string name="Questions">"Si usted tiene entre 15 y 69 años de edad, el cuestionario PAR-Q le indicará si necesita consultar a su médico antes de iniciar un programa de ejercicio o actividad física.\n"</string>
    <string name="datosaggre">"¿Deseraría autorizarnos para almacenar sus datos para generar estadísticas y participar en posibles estudios? \n\n"
    "Los datos personales no serán compartidos, solo datos genéricos para efectos de estudios.\n"</string>
    <string name="large_text">
        "Bienvenido a Calidad del aire.\n\n"
        "
        "Por regulaciones de ley es importante para usted y nosotros que lea, entienda y conteste de manera sincera las siguientes preguntas."
        Entienda que si alguna de las siguientes siete respuestas es afirmativa, no podrás hacer uso de ésta aplicación.\n
        Agradecemos nos entienda y nos disculpen\n
        " "
         "Att: Dirección de proyecto"
    </string>
    <string name="logeando">Iniciando sesión</string>
    <string name="salir">"Apreciado usuario por motivos de su bienestar físico, le recomendamos consultar un médico antes de iniciar un plan de actividad física</string>
    <string name="not_log_in">Autenticación fallida</string>
    <string name="action_settings">Acerca de</string>

    <string name="title">Air Quality...</string>
    <string name="Registro">Registra tu información</string>
    <string name="title_activity_navigationdrawer">Menu Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Air Quality</string>
    <string name="nav_header_subtitle">airepuro@unac.edu.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="kevin">Kevin Hanmerly \n Ortiz Dimingo</string>
    <string name="brayan">Brayan David \n Torres Suares</string>
    <string name="jhan">Jhan Kein \n Sierra</string>
    <string name="version">App Version 1.0 ® \n Desarrollada por:</string>
    <string name="christofer">Christopher \n Vargas Isaza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="dormir">dormir</string>
    <string name="pausar">Pausar</string>
    <string name="despertar">Despertar</string>

    <string name="informaciontablapasos">En el siguiente grafico se visualiza los pasos que da diariamente, de acuerdo a sus metas.</string>
    <string name="titulograficopasos">GRÁFICO PASOS</string>
</resources>
