<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:weightSum="8"
    android:layout_height="350dp">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/version"
        android:textColor="#243"
        android:textSize="23dp"
        android:textStyle="bold" />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:gravity="center"
    android:layout_marginTop="9dp"
    android:layout_height="match_parent"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/brayan"
            android:textSize="20dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/brayan"
            android:layout_marginStart="10dp"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:src="@drawable/brayan" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <android.support.v7.widget.CardView
        android:layout_width="80dp"
        android:layout_height="90dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:src="@drawable/kevin" />
    </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kevin"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
        android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jhan"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textStyle="bold" />
    <android.support.v7.widget.CardView
        android:layout_width="80dp"
        android:layout_height="90dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/jhnak" />
    </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="horizontal">
    <android.support.v7.widget.CardView
        android:layout_width="90dp"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/christofer" />
    </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/christofer"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>